# arrow-tools

./: .dockerignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  README.md
patches/xlnt/: 01-cell-computed-number-format.diff  02-clear-cell-when-streaming.diff  02-issue-492-skip-empty-rows-when-streaming.diff  03-patternType-is-optional-p1792.diff  04-pane-splits-are-doubles-p1665.diff
src/: arrow-validate.cc  column-builder.cc  column-builder.h  common.cc  common.h  csv-to-arrow.cc  excel-table-builder.cc  excel-table-builder.h  json-table-builder.cc  json-table-builder.h  json-to-arrow.cc  json-warnings.cc  json-warnings.h  libstudxml-shim.h  string-buffer.h  xls-to-arrow.cc  xlsx-to-arrow.cc
tests/: test_arrow_validate.py  test_csv_to_arrow.py  test_json_to_arrow.py  test_xls_to_arrow.py  test_xlsx_to_arrow.py  util.py
tests/files/: xml-required-attribute-missing-in-rels.xlsx
